# bloodhound

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.build  LICENSE  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  e2e.yml
bloodhound/: Cargo.toml  README.md  build.rs
bloodhound-common/: Cargo.toml  README.md
bloodhound-common/src/: lib.rs
bloodhound-ebpf/: Cargo.toml  README.md
bloodhound-ebpf/src/: fd_ident.rs  filter.rs  helpers.rs  layer1_tty.rs  layer2_exec.rs  layer3_raw.rs  layer3_rich.rs  lsm_hooks.rs  main.rs  maps.rs  packet_tc.rs  vmlinux.rs
bloodhound-tui/: Cargo.toml  README.md
bloodhound-tui/src/: app.rs  command_reconstructor.rs  correlator.rs  event_model.rs  keybinds.rs  main.rs  render_tests.rs  ui.rs
bloodhound-tui/src/snapshots/: bloodhound_tui__render_tests__exec_tree_expanded_process_lifecycle.snap  bloodhound_tui__render_tests__initial_render_file_exploration.snap  bloodhound_tui__render_tests__pane_detail_active.snap  bloodhound_tui__render_tests__pane_history_active.snap  bloodhound_tui__render_tests__pane_output_active.snap  bloodhound_tui__render_tests__tab_all.snap  bloodhound_tui__render_tests__tab_exec.snap  bloodhound_tui__render_tests__tab_files.snap  bloodhound_tui__render_tests__tab_network.snap  bloodhound_tui__render_tests__tab_process.snap  bloodhound_tui__render_tests__tab_security.snap  bloodhound_tui__render_tests__tab_syscall.snap
bloodhound-tui/testdata/: 01_file_exploration.ndjson  02_file_mutation.ndjson  03_process_lifecycle.ndjson
bloodhound/src/: cli.rs  consumer.rs  deserializer.rs  drop_counter.rs  enricher.rs  heartbeat.rs  lifecycle.rs  loader.rs  main.rs  packet_correlator.rs  serializer.rs  shutdown.rs
bloodhound/src/snapshots/: bloodhound__deserializer__golden_tests__clone.snap  bloodhound__deserializer__golden_tests__connect_ipv4.snap  bloodhound__deserializer__golden_tests__connect_ipv6.snap  bloodhound__deserializer__golden_tests__execve.snap  bloodhound__deserializer__golden_tests__lsm_bpf.snap  bloodhound__deserializer__golden_tests__lsm_ptrace.snap  bloodhound__deserializer__golden_tests__lsm_setuid.snap  bloodhound__deserializer__golden_tests__lsm_task_kill.snap  bloodhound__deserializer__golden_tests__mkdir.snap  bloodhound__deserializer__golden_tests__openat.snap  bloodhound__deserializer__golden_tests__packet_ingress.snap  bloodhound__deserializer__golden_tests__raw_syscall.snap  bloodhound__deserializer__golden_tests__read.snap  bloodhound__deserializer__golden_tests__rename.snap  bloodhound__deserializer__golden_tests__sendto.snap  bloodhound__deserializer__golden_tests__tty_read.snap  bloodhound__deserializer__golden_tests__tty_write.snap
docs/: build.md  data-pipeline.md  ebpf-offsets.md  filtering.md  lifecycle.md  output-schema.md  schema.json  spec.md  tamper-resistance.md  testing.md  tracing.md  userspace.md
e2e/: Dockerfile  Makefile  README.md
e2e/scripts/: boot-vm.sh  build-rootfs.sh  deploy.sh  run-and-record.sh  smoke-test.sh
e2e/scripts/scenario/: 01_file_exploration.sh  02_file_mutation.sh  03_process_lifecycle.sh  04_network_activity.sh  05_permission_boundary.sh  06_realistic_workflow.sh  07_process_tree.sh
e2e/tests/: conftest.py  helpers.py  test_exit_group.py  test_layer1_tty.py  test_layer2_exec.py  test_layer3_syscalls.py  test_lsm.py  test_packet.py  test_schema.py
