[workspace]
resolver = "2"
members = ["bloodhound", "bloodhound-common", "bloodhound-tui"]
# bloodhound-ebpf is intentionally excluded: it builds for bpfel-unknown-none
# via aya-build (see bloodhound/build.rs) and lives in its own workspace so
# rust-analyzer can analyze it under the bpf target.

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
bloodhound-common = { path = "bloodhound-common" }

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
