[workspace]
resolver = "2"
members = ["bloodhound", "bloodhound-common", "bloodhound-tui"]
# bloodhound-ebpf is intentionally excluded: it builds for bpfel-unknown-none
# via aya-build (see bloodhound/build.rs) and lives in its own workspace so
# rust-analyzer can analyze it under the bpf target.

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
bloodhound-common = { path = "bloodhound-common" }

[workspace.lints.clippy]
# Forbid reinterpret-casting `*const u8` to `*const T` where align(T) > 1.
# The deserializer reads BPF wire bytes from `Vec<u8>` whose alignment is
# only guaranteed to be 1; use `core::ptr::read_unaligned` instead.
cast_ptr_alignment = "deny"

[profile.dev]
panic = "abort"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
