[workspace]

[package]
name = "bloodhound-ebpf"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "bloodhound-ebpf"
path = "src/main.rs"

[dependencies]
aya-ebpf = "0.1"
aya-log-ebpf = "0.1"
bloodhound-common = { path = "../bloodhound-common" }

[profile.dev]
panic = "abort"
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
codegen-units = 1

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

