[package]
name = "bloodhound-tui"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
