[package]
name = "bloodhound"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
bloodhound-common = { path = "../bloodhound-common", features = ["user"] }
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"

[build-dependencies]
aya-build = "0.1"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
tokio = { version = "1", features = ["full", "test-util"] }
